--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -81,6 +81,18 @@ border-radius: 1%;
     object-fit: fill;
 }
 
+.jumbocard{
+       transform: scale(0.8);
+      background-color: black;
+      color: white;
+      font-size: 25px; 
+      font-style: italic; 
+      margin-left: 10%; 
+      margin-right: 10%;
+
+    }
+
+
 /*
 Pantalla Extra Large (>=1200px)
  */
