--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -1,51 +1,51 @@
-.navbar{
+.navbar {
     background-image: url(../Img/fondo.jpg);
     background-repeat: repeat-x;
     background-size: 25%;
 }
 
-.nav-link{
-    color: white;  
+.nav-link {
+    color: white;
 }
 
-.nimrodel{
+.nimrodel {
     text-align: center;
     color: grey;
     margin-top: 1%;
     font-size: xx-large;
 }
 
-.destacados{
+.destacados {
     text-align: center;
     margin-top: 1%;
     text-decoration: overline;
 }
 
-main{
+main {
     text-align: center;
-    margin:1%;
-    padding:1%;
+    margin: 1%;
+    padding: 1%;
 }
 
-.imagenes{
+.imagenes {
     display: inline-block;
 }
 
-.formularios{
-    background-color:#070707;
-    text-align:center;
+.formularios {
+    background-color: #070707;
+    text-align: center;
     display: block;
     color: white;
     margin: 0 auto;
     width: 250px;
-    }
+}
 
-footer{
+footer {
     color: white;
     margin-top: 5%;
     text-align: center;
     background-image: url(../Img/fondo.jpg);
-    height:500px;
+    height: 500px;
     background-repeat: no-repeat;
     background-position: center top;
     background-color: black;
@@ -65,118 +65,299 @@ footer{
 }
 
 #comuniquemonos {
-width: 40%;
-margin: auto;
-margin-top: 4%;
-background-color: #070707;
-opacity: 0.7;
-padding: 1%;
-color: white;
-border-radius: 1%;
+    width: 40%;
+    margin: auto;
+    margin-top: 4%;
+    background-color: #070707;
+    opacity: 0.7;
+    padding: 1%;
+    color: white;
+    border-radius: 1%;
 }
 
-.carousel-inner{
+.carousel-inner {
     margin-bottom: -5%;
     height: 650px;
     object-fit: fill;
 }
 
-.jumbocard{
-       transform: scale(0.8);
-      background-color: black;
-      color: white;
-      font-size: 25px; 
-      font-style: italic; 
-      margin-left: 10%; 
-      margin-right: 10%;
+.jumbocard {
+    transform: scale(0.8);
+    background-color: transparent;
+    color: white;
+    font-size: 25px;
+    font-style: italic;
+    margin-left: 10%;
+    margin-right: 10%;
 
-    }
+}
 
+.carousel-item img {
+    max-width: 100%;
+    height: auto;
+}
 
 /*
 Pantalla Extra Large (>=1200px)
  */
-@media(min-width:1200px){
-    .col-xl-12{width: 100%;}
-    .col-xl-11{width: 91.66666667%;}
-    .col-xl-10{width: 83.33333334%;}
-    .col-xl-9{width: 75%;}
-    .col-xl-8{width: 66.66666667%;}
-    .col-xl-7{width: 58.33333334%;}
-    .col-xl-6{width: 50%;}
-    .col-xl-5{width: 41.66666667%;}
-    .col-xl-4{width: 33.33333334%;}
-    .col-xl-3{width: 25%;}
-    .col-xl-2{width: 16.66666667%;}
-    .col-xl-1{width: 8.33333333%;}
+@media(min-width:1200px) {
+    .col-xl-12 {
+        width: 100%;
     }
 
-    /*
+    .col-xl-11 {
+        width: 91.66666667%;
+    }
+
+    .col-xl-10 {
+        width: 83.33333334%;
+    }
+
+    .col-xl-9 {
+        width: 75%;
+    }
+
+    .col-xl-8 {
+        width: 66.66666667%;
+    }
+
+    .col-xl-7 {
+        width: 58.33333334%;
+    }
+
+    .col-xl-6 {
+        width: 50%;
+    }
+
+    .col-xl-5 {
+        width: 41.66666667%;
+    }
+
+    .col-xl-4 {
+        width: 33.33333334%;
+    }
+
+    .col-xl-3 {
+        width: 25%;
+    }
+
+    .col-xl-2 {
+        width: 16.66666667%;
+    }
+
+    .col-xl-1 {
+        width: 8.33333333%;
+    }
+}
+
+/*
     Pantalla Large (>=992px)
    */
-@media(min-width:992px) and (max-width:1199px){
-    .col-lg-12{width: 100%;}
-    .col-lg-11{width: 91.66666667%;}
-    .col-lg-10{width: 83.33333334%;}
-    .col-lg-9{width: 75%;}
-    .col-lg-8{width: 66.66666667%;}
-    .col-lg-7{width: 58.33333334%;}
-    .col-lg-6{width: 50%;}
-    .col-lg-5{width: 41.66666667%;}
-    .col-lg-4{width: 33.33333334%;}
-    .col-lg-3{width: 25%;}
-    .col-lg-2{width: 16.66666667%;}
-    .col-lg-1{width: 8.33333333%;}
+@media(min-width:992px) and (max-width:1199px) {
+    .col-lg-12 {
+        width: 100%;
     }
+
+    .col-lg-11 {
+        width: 91.66666667%;
+    }
+
+    .col-lg-10 {
+        width: 83.33333334%;
+    }
+
+    .col-lg-9 {
+        width: 75%;
+    }
+
+    .col-lg-8 {
+        width: 66.66666667%;
+    }
+
+    .col-lg-7 {
+        width: 58.33333334%;
+    }
+
+    .col-lg-6 {
+        width: 50%;
+    }
+
+    .col-lg-5 {
+        width: 41.66666667%;
+    }
+
+    .col-lg-4 {
+        width: 33.33333334%;
+    }
+
+    .col-lg-3 {
+        width: 25%;
+    }
+
+    .col-lg-2 {
+        width: 16.66666667%;
+    }
+
+    .col-lg-1 {
+        width: 8.33333333%;
+    }
+}
 
 /*
     Pantalla Medium (>=768px)
    */
-@media(min-width:768px) and (max-width:991px){
-    .col-md-12{width: 100%;}
-    .col-md-11{width: 91.66666667%;}
-    .col-md-10{width: 83.33333334%;}
-    .col-md-9{width: 75%;}
-    .col-md-8{width: 66.66666667%;}
-    .col-md-7{width: 58.33333334%;}
-    .col-md-6{width: 50%;}
-    .col-md-5{width: 41.66666667%;}
-    .col-md-4{width: 33.33333334%;}
-    .col-md-3{width: 25%;}
-    .col-md-2{width: 16.66666667%;}
-    .col-md-1{width: 8.33333333%;}
+@media(min-width:768px) and (max-width:991px) {
+    .col-md-12 {
+        width: 100%;
+    }
+
+    .col-md-11 {
+        width: 91.66666667%;
+    }
+
+    .col-md-10 {
+        width: 83.33333334%;
+    }
+
+    .col-md-9 {
+        width: 75%;
+    }
+
+    .col-md-8 {
+        width: 66.66666667%;
+    }
+
+    .col-md-7 {
+        width: 58.33333334%;
+    }
+
+    .col-md-6 {
+        width: 50%;
+    }
+
+    .col-md-5 {
+        width: 41.66666667%;
+    }
+
+    .col-md-4 {
+        width: 33.33333334%;
+    }
+
+    .col-md-3 {
+        width: 25%;
+    }
+
+    .col-md-2 {
+        width: 16.66666667%;
+    }
+
+    .col-md-1 {
+        width: 8.33333333%;
+    }
 }
+
 /*
     Pantalla LSmall (>=576px)
    */
-@media(min-width:576px) and (max-width:767px){
-    .col-sm-12{width: 100%;}
-    .col-sm-11{width: 91.66666667%;}
-    .col-sm-10{width: 83.33333334%;}
-    .col-sm-9{width: 75%;}
-    .col-sm-8{width: 66.66666667%;}
-    .col-sm-7{width: 58.33333334%;}
-    .col-sm-6{width: 50%;}
-    .col-sm-5{width: 41.66666667%;}
-    .col-sm-4{width: 33.33333334%;}
-    .col-sm-3{width: 25%;}
-    .col-sm-2{width: 16.66666667%;}
-    .col-sm-1{width: 8.33333333%;}
+@media(min-width:576px) and (max-width:767px) {
+    .col-sm-12 {
+        width: 100%;
+    }
+
+    .col-sm-11 {
+        width: 91.66666667%;
+    }
+
+    .col-sm-10 {
+        width: 83.33333334%;
+    }
+
+    .col-sm-9 {
+        width: 75%;
+    }
+
+    .col-sm-8 {
+        width: 66.66666667%;
+    }
+
+    .col-sm-7 {
+        width: 58.33333334%;
+    }
+
+    .col-sm-6 {
+        width: 50%;
+    }
+
+    .col-sm-5 {
+        width: 41.66666667%;
+    }
+
+    .col-sm-4 {
+        width: 33.33333334%;
+    }
+
+    .col-sm-3 {
+        width: 25%;
+    }
+
+    .col-sm-2 {
+        width: 16.66666667%;
+    }
+
+    .col-sm-1 {
+        width: 8.33333333%;
+    }
 }
+
 /*
     Pantalla Extra small (<576px)
    */
-@media(max-width:575px){
-    .col-xs-12{width: 100%;}
-    .col-xs-11{width: 91.66666667%;}
-    .col-xs-10{width: 83.33333334%;}
-    .col-xs-9{width: 75%;}
-    .col-xs-8{width: 66.66666667%;}
-    .col-xs-7{width: 58.33333334%;}
-    .col-xs-6{width: 50%;}
-    .col-xs-5{width: 41.66666667%;}
-    .col-xs-4{width: 33.33333334%;}
-    .col-xs-3{width: 25%;}
-    .col-xs-2{width: 16.66666667%;}
-    .col-xs-1{width: 8.33333333%;}
+@media(max-width:575px) {
+    .col-xs-12 {
+        width: 100%;
+    }
+
+    .col-xs-11 {
+        width: 91.66666667%;
+    }
+
+    .col-xs-10 {
+        width: 83.33333334%;
+    }
+
+    .col-xs-9 {
+        width: 75%;
+    }
+
+    .col-xs-8 {
+        width: 66.66666667%;
+    }
+
+    .col-xs-7 {
+        width: 58.33333334%;
+    }
+
+    .col-xs-6 {
+        width: 50%;
+    }
+
+    .col-xs-5 {
+        width: 41.66666667%;
+    }
+
+    .col-xs-4 {
+        width: 33.33333334%;
+    }
+
+    .col-xs-3 {
+        width: 25%;
+    }
+
+    .col-xs-2 {
+        width: 16.66666667%;
+    }
+
+    .col-xs-1 {
+        width: 8.33333333%;
+    }
 }
